# Rust

./: .gitignore  README.md  deref.txt  sized.txt  to_string.txt
DSandAlg/BinarySearch/: Cargo.toml
DSandAlg/BinarySearchTree/: Cargo.toml
DSandAlg/CommonElementsInTwoArrays/: Cargo.toml
DSandAlg/ConnectedComponentsUndirectedGraph/: Cargo.toml
DSandAlg/FenwickTree/: Cargo.toml
DSandAlg/Graph/: Cargo.toml
DiningPhilosophers/: Cargo.toml
FizzBuzz/: Cargo.toml
GuessingGame/: GuessingGame.sln
HelloWorld/: HelloWorld.sln
MergeSort/: Cargo.toml
NeuralNetwork/: Cargo.toml  TODO  rustfmt.toml
NeuralNetwork/lib/ann/: Cargo.toml
NeuralNetwork/lib/ann/src/: ann.rs  la.rs  lib.rs
NeuralNetwork/lib/ann/src/ann/: activation.rs  cost_function.rs  layers.rs  minibatch.rs  model.rs  training_data.rs
NeuralNetwork/lib/ann/src/ann/layers/: activation_layer.rs  batch_normalize.rs  dropout_layer.rs  fc_layer.rs  input_layer.rs  layer.rs  softmax.rs  softmax_layer.rs  training_data.rs
NeuralNetwork/lib/ann/tests/: cost_function_test.rs  dropout_test.rs  model_tests.rs
ThoughtsOnLifetimes/: Cargo.toml
software_3d_renderer/: Cargo.toml  build.rs
software_3d_renderer/src/: RenderContext.rs  Renderable.rs  SceneObject.rs  Triangle.rs  Vertex.rs  camera.rs  color.rs  color_texture.rs  cube.rs  image_texture.rs  lin_alg.rs  main.rs  matrix4.rs  obj_mesh_loader.rs  raster_vertex.rs  render_context.rs  renderable.rs  scene_object.rs  simple_light_source.rs  teapot.rs  texture.rs  texture_manager.rs  texture_type.rs  triangle.rs  vertex.rs  vertex4.rs
(+400 files in other folders)
